# template

./: LICENSE  README.md  pyproject.toml
src/your_package/: __init__.py
